# TsFile-BenchMark

./: .gitignore  README.md
.github/workflows/: benchmark.yml
bench_results/20250724-172000/: benchmark_comment.md
bench_results/20250724-172100/: benchmark_comment.md
bench_results/20250724-172258/: benchmark_comment.md
bench_results/20250724-172833/: benchmark_comment.md
bench_results/20250724-175049/: benchmark_comment.md
bench_results/20250724-183830/: benchmark_comment.md
bench_results/20250724-183942/: benchmark_comment.md
bench_results/20250724-184247/: benchmark_comment.md
benchmark_core/: conf.json
benchmark_core/cpp/: CMakeLists.txt
benchmark_core/cpp/src/: bench_mark.cc  bench_mark_c.cc  bench_mark_c_cpp.h  bench_mark_cpp.cc  bench_mark_utils.cc  bench_mark_utils.h
benchmark_core/java/: BenchMark.java  MemoryMonitor.java  pom.xml
benchmark_core/java/src/main/java/org/apache/tsfile/benchmark/: BenchMark.java  ConfigLoad.java  MemoryMonitor.java
benchmark_core/parquet/cpp/: CMakeLists.txt  build.sh
benchmark_core/parquet/cpp/src/: parquet_bench_main.cc  parquet_bench_utils.cc  parquet_bench_utils.h
benchmark_core/parquet/java/: pom.xml
benchmark_core/parquet/java/src/main/java/org/apache/tsfile/benchmark/parquet/: ConfigLoad.java  MemoryMonitor.java  (+1 more)
benchmark_core/parquet/python/: bench_mark_parquet.py
benchmark_core/python/: bench_mark.py
benchmark_core/tsfile/cpp/: CMakeLists.txt  build.sh
benchmark_core/tsfile/cpp/src/: bench_mark_c_cpp.h  bench_mark_cpp.cc
benchmark_core/tsfile/java/: pom.xml
benchmark_core/tsfile/java/src/main/java/org/apache/tsfile/benchmark/: BenchMark.java  ConfigLoad.java  MemoryMonitor.java
benchmark_core/tsfile/python/: bench_mark.py
benchmark_result/: benchmark_history.db
benchmark_result/2026-03-07_10-08-44/: results_java.json  results_parquet_cpp.json  results_parquet_python.json  results_python.json
benchmark_result/2026-03-07_11-45-03/: results_cpp.json  results_parquet_java.json
benchmark_result/2026-03-07_17-43-53/: results_cpp.json  results_java.json  results_parquet_cpp.json  results_parquet_java.json  results_parquet_python.json  results_python.json
benchmark_result/2026-03-07_23-09-03/: results_cpp.json  results_java.json  results_parquet_cpp.json  results_parquet_java.json  results_parquet_python.json  results_python.json
benchmark_result/2026-03-08_01-20-18/: results_cpp.json  results_java.json  results_parquet_cpp.json  results_parquet_java.json  results_parquet_python.json  results_python.json
docker/: Dockerfile  run_benchmark.sh
result/: results_cpp.json  results_java.json  results_parquet_cpp.json  results_parquet_java.json  results_parquet_python.json  results_python.json
scripts/: append_to_history.py  generate_memory_charts.py  generate_performance_charts.py  generate_trend_charts.py  process_data_and_report_benchmark.py  report_benchmark_result.py  start_benchmark_docker.sh  upload_benchmark_assets.py
